@@ -1,5 +1,7 @@
 *SVN*
 
+* Added second boolean parameter to Base.redirect_to_url and Response#redirect to control whether the redirect is permanent or not (301 vs 302) #375 [Hodel]
+
 * Fixed that @request.remote_ip didn't work in the test environment #369 [Bruno Mattarollo]
 
 * Added :host and :protocol options to url_for and friends to redirect to another host and protocol than the current.
